Set up 4 parody logos, alignment fixes are needed though

--- a/gamesgame/styles.scss
+++ b/gamesgame/styles.scss
@@ -57,6 +57,86 @@ img {
     display: none !important;
 }
 
+.header {
+    display: flex;
+    justify-content: center;
+    padding-top: 15px;
+
+    &-title {
+        font-family: 'Poppins', sans-serif;
+        text-align: center;
+        font-size: 1.8rem;
+        position: relative;
+        
+        &.var-4 { //n64
+            font-weight: bold;
+            color: #0124a6;
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 4px;
+                right: -29px;
+                background: url(assets/logo-var-4.svg) no-repeat;
+                width: 26px;
+                height: 20px;
+                background-size: 26px auto;
+            }
+        }
+
+        &.var-12 { //xbox 360
+            font-weight: 300;
+            color: #92c83e;
+            margin-left: -49px;
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 10.5px;
+                right: -51px;
+                background: url(assets/logo-var-12.svg) no-repeat;
+                width: 49px;
+                height: 23px;
+                background-size: 49px auto;
+            }
+        }
+
+        &.var-19 { //snes
+            font-style: italic;
+            color: #fc0c18;
+            margin-top: 6px;
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 33px;
+                left: 2px;
+                background: url(assets/logo-var-19.svg) no-repeat;
+                width: 144px;
+                height: 13px;
+                background-size: 144px auto;
+            }
+        }
+
+        &.var-22 { //gbc
+            font-style: italic;
+            color: #2e3192;
+            margin-left: -88px;
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 10px;
+                right: -88px;
+                background: url(assets/logo-var-22.svg) no-repeat;
+                width: 82px;
+                height: 23px;
+                background-size: 82px 23px;
+            }
+        }
+    }
+}
+
 .results {
     list-style-type: none;
     padding: 5px;
@@ -252,7 +332,7 @@ main {
 }
 
 .categories {
-    &--top {
+    &.categories--top {
         display: grid;
         grid-template-columns: repeat(3, minmax(0, 1fr));
         max-width: var(--grid-max-width);
@@ -267,7 +347,7 @@ main {
             font-size: 14px;
             font-weight: bold;
             text-align: center;
-            align-items: flex-end;
+            align-items: center;
 
             @media (width > 775px) {
                 --box-width: calc(var(--max-grid-width) / 3);
@@ -275,8 +355,7 @@ main {
             }
 
             @media (width < 550px) {
-                font-size: 0.75rem;
-                padding: 0 10px 5px;
+                font-size: 0.8rem;
             }
 
             @media (width < 392px) {
@@ -284,8 +363,34 @@ main {
                 padding: 0 5px 5px;
             }
 
-            &-div {
-                width: 100%;
+            &-image {
+                max-height: 60px;
+
+                &.categories-label-image--platforms-4,
+                &.categories-label-image--platforms-5,
+                &.categories-label-image--platforms-7,
+                &.categories-label-image--platforms-9,
+                &.categories-label-image--platforms-22,
+                &.categories-label-image--platforms-30,
+                &.categories-label-image--platforms-41,
+                &.categories-label-image--platforms-68,
+                &.categories-label-image--platforms-169 { //n64, wii, ps1, ps3, gbc, 32x, wii u, coleco vision, xbox series xs
+                    max-width: 80%;
+                }
+
+                &.categories-label-image--platforms-23,
+                &.categories-label-image--platforms-130 { //dreamcast, switch
+                    width: 70%;
+                }
+
+                &.categories-label-image--platforms-3,
+                &.categories-label-image--platforms-35 { //linux, game gear
+                    width: 60%;
+                }
+
+                &.categories-label-image--platforms-14 { //apple
+                    width: 50%;
+                }
             }
         }
     }
@@ -313,26 +418,55 @@ main {
             font-weight: bold;
 
             @media (width < 550px) {
-                font-size: 0.75rem;
-                padding: 0 10px 5px;
+                font-size: 0.8rem;
+                padding: 0 5px 5px;
             }
 
             @media (width < 392px) {
                 font-size: 0.625rem;
                 padding: 0 5px 5px;
             }
-
-            &-div {
-                width: 100%;
-            }
         }
     }
 
-    .categories-label-image {
-        width: 50%;
+    .categories-label-div {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-        &.categories-label-image--platforms-19 { //SNES
-            width: 100%;
+    .categories-label-image {
+        width: 100%;
+
+        &[class*="age_rating"] {
+            width: 50%;
+        }
+
+        &.categories-label-image--platforms-4,
+        &.categories-label-image--platforms-5,
+        &.categories-label-image--platforms-7,
+        &.categories-label-image--platforms-9,
+        &.categories-label-image--platforms-22,
+        &.categories-label-image--platforms-30,
+        &.categories-label-image--platforms-41,
+        &.categories-label-image--platforms-68,
+        &.categories-label-image--platforms-169 { //n64, wii, ps1, ps3, gbc, 32x, wii u, coleco vision, xbox series xs
+            width: 90%;
+        }
+
+        &.categories-label-image--platforms-23,
+        &.categories-label-image--platforms-130 { //dreamcast, switch
+            width: 80%;
+        }
+
+        &.categories-label-image--platforms-3,
+        &.categories-label-image--platforms-35 { //linux, game gear
+            width: 70%;
+        }
+
+        &.categories-label-image--platforms-14 { //apple
+            width: 60%;
         }
     }
 }
